fix: restricts intro on talent page to hide overflow of image

--- a/src/talent/talent.scss
+++ b/src/talent/talent.scss
@@ -8,6 +8,7 @@
     align-items: center;
     justify-content: space-between;
     padding-top: 130px;
+    overflow: hidden;
 
     .intro-content {
       display: flex;
